--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "tailwindcss": "^3.4.0",
         "vite": "^5.0",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "peer": "^1.0.2"
     }
 }
