audio calling system successfully

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
-        "peer": "^1.0.2"
+        "peer": "^1.0.2",
+        "peerjs": "^1.5.4"
     }
 }
